# trading-platform

./: .gitignore  README.md  docker-compose.yaml  env.example
python-services/: requirements.txt
python-services/admin-api/: requirements.txt
python-services/admin-api/app/: main.py
python-services/market-data/app/: main.py  websocket_service.py
python-services/shared/: database.py  kafka_client.py
rust-core/: Cargo.toml
rust-core/bot/: Cargo.toml
rust-core/bot/src/: binance_ws.rs  config.rs  main.rs  metrics.rs
rust-core/market-data/: Cargo.toml
rust-core/market-data/src/: main.rs
rust-core/strategy/: Cargo.toml
rust-core/strategy/src/: lib.rs
