[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
strategy = { path = "../strategy" }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
rust_decimal = { version = "1", features = ["serde"] }
axum = "0.7"
prometheus = "0.13"
once_cell = "1"
